# MedFT-DS

./: .gitignore  FT_Llama3.3_Conversational.ipynb  README.md  generate_reviews.py  main.py  pipeline_documentation.md  pv_orchestrator.py  pyproject.toml
data/: biodex_chatml.jsonl  fda_cardio_clinical.csv  fda_cardio_clinical.jsonl  fda_chatml.jsonl  pv_safety_review_dataset_3000.jsonl
scripts/: compile_dataset.py  extract_rsi.py  fetch_fda_cardio.py  prepare_cardio_subset.py  preprocess_datasets.py  validate_outputs.py
